--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.2.20",
+    "@fastify/multipart": "^9.4.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
-    "openai": "^6.16.0"
+    "mammoth": "^1.11.0",
+    "openai": "^6.16.0",
+    "pdf-parse": "^2.4.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^25.0.10",
