--- a/package.json
+++ b/package.json
@@ -1,79 +1,38 @@
 {
-  "name": "esume-forge",
+  "name": "resume-forge",
+  "version": "1.0.0",
+  "description": "Resume builder monorepo with web frontend and backend server",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "packageManager": "pnpm@8.7.5",
+  "packageManager": "pnpm@10.28.2",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --fix",
-    "lint:check": "eslint .",
-    "preview": "vite preview",
+    "dev": "pnpm -r --parallel dev",
+    "dev:web": "pnpm --filter @resume/web dev",
+    "dev:server": "pnpm --filter @resume/server dev",
+    "build": "pnpm -r build",
+    "build:web": "pnpm --filter @resume/web build",
+    "build:server": "pnpm --filter @resume/server build",
+    "lint": "pnpm -r lint",
+    "lint:check": "pnpm -r lint:check",
     "format": "prettier --write .",
     "prepare": "husky"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,md}": [
-      "prettier --write"
-    ]
-  },
-  "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "@tanstack/react-query": "^5.90.20",
-    "@tanstack/react-query-devtools": "^5.91.2",
-    "@tiptap/core": "^3.18.0",
-    "@tiptap/extension-table": "^3.18.0",
-    "@tiptap/extension-table-cell": "^3.18.0",
-    "@tiptap/extension-table-header": "^3.18.0",
-    "@tiptap/extension-table-row": "^3.18.0",
-    "@tiptap/extension-typography": "^3.17.1",
-    "@tiptap/pm": "^3.17.1",
-    "@tiptap/react": "^3.17.1",
-    "@tiptap/starter-kit": "^3.17.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.29.0",
-    "ky": "^1.14.3",
-    "lucide-react": "^0.563.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router": "^7.13.0",
-    "react-router-dom": "^7.13.0",
-    "tailwind-merge": "^3.4.0",
-    "tiptap-markdown": "^0.9.0",
-    "zustand": "^5.0.10"
-  },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@faker-js/faker": "^10.2.0",
-    "@tailwindcss/typography": "^0.5.19",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.23",
-    "eslint": "^9.39.1",
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-react-refresh": "^0.4.26",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
-    "msw": "^2.12.7",
-    "postcss": "^8.5.6",
     "prettier": "^3.8.1",
-    "react-scan": "^0.4.3",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "typescript-eslint": "^8.54.0"
   },
-  "msw": {
-    "workerDirectory": [
-      "public"
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,css,md}": [
+      "prettier --write"
     ]
   }
 }
