--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "server",
+  "name": "@resume/server",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "type": "module",
-  "packageManager": "pnpm@8.7.5",
+  "packageManager": "pnpm@10.28.2",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
+    "lint": "eslint . --fix",
+    "lint:check": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@resume/types": "workspace:*",
     "@anthropic-ai/claude-agent-sdk": "^0.2.20",
     "@fastify/multipart": "^9.4.0",
     "dotenv": "^17.2.3",
@@ -25,9 +28,16 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.10",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "globals": "^16.5.0",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.21.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0"
   }
 }
