--- a/server/package.json
+++ b/server/package.json
@@ -17,15 +17,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@resume/types": "workspace:*",
+    "@ai-sdk/anthropic": "^3.0.29",
+    "@ai-sdk/deepseek": "^1.0.9",
+    "@ai-sdk/openai": "^3.0.21",
     "@anthropic-ai/claude-agent-sdk": "^0.2.20",
     "@fastify/multipart": "^9.4.0",
+    "@resume/types": "workspace:*",
+    "ai": "^6.0.59",
     "dotenv": "^17.2.3",
     "fastify": "^5.7.2",
     "mammoth": "^1.11.0",
     "openai": "^6.16.0",
     "pdf-parse": "^2.4.5",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
