--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@resume/types": "workspace:*",
     "@headlessui/react": "^2.2.9",
+    "@resume/types": "workspace:*",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-devtools": "^5.91.2",
     "@tiptap/core": "^3.18.0",
@@ -32,6 +32,7 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-resizable-panels": "^4.5.4",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.4.0",
