--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "react-resizable-panels": "^4.5.4",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tiptap-markdown": "^0.9.0",
     "zustand": "^5.0.10"
