refactor: improve component styling and structure across the application
- Updated Sidebar component styles for better consistency and readability.
- Refactored Upload component layout and styles for improved user experience.
- Simplified deepAnalysisStore by removing unnecessary parameters.
- Enhanced TiptapEditor and TagComponent for better alignment and spacing.
- Adjusted MainLayout for improved responsiveness and layout consistency.
- Refined AnimationDemo and DesignSystem pages for better visual hierarchy.
- Improved Discover and Home pages with better layout and spacing.
- Enhanced Resume page layout for better alignment and readability.
- Updated AnimatedButton, AnimatedCard, and AnimatedLoader components for cleaner code.
- Refactored Button, Input, and Typography components for improved styling consistency.

--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@resume/eslint-config": "workspace:*",
     "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.10",
     "eslint": "^9.39.2",
