--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@resume/eslint-config": "workspace:*",
     "@eslint/js": "^9.39.1",
     "@faker-js/faker": "^10.2.0",
     "@tailwindcss/typography": "^0.5.19",
@@ -55,6 +56,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-tailwindcss": "^3.18.0",
     "globals": "^16.5.0",
     "msw": "^2.12.7",
     "postcss": "^8.5.6",
