--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "framework": "vite",
+  "installCommand": "pnpm install --frozen-lockfile --prod=false",
   "buildCommand": "pnpm --filter @resume/web build",
   "outputDirectory": "web/dist",
   "rewrites": [
