chore: apply staged vercel api and lint updates

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
     {
       "source": "/deepseek/:path*",
       "destination": "/api/deepseek/:path*"
+    },
+    {
+      "source": "/crypto/:path*",
+      "destination": "/api/crypto/:path*"
     }
   ],
   "functions": {
