feat(server): improve self-hosted deployment with pm2 support

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "build": "pnpm -r build",
     "build:web": "pnpm --filter @resume/web build",
     "build:server": "pnpm --filter @resume/server build",
+    "deploy:server": "pnpm --filter @resume/server deploy",
+    "logs:server": "pnpm --filter @resume/server pm2:logs",
+    "stop:server": "pnpm --filter @resume/server pm2:stop",
     "lint": "pnpm -r lint",
     "lint:check": "pnpm -r lint:check",
     "format": "prettier --write .",
