feat: update build scripts to include types package and enhance tsconfig settings

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev:web": "pnpm --filter @resume/web dev",
     "dev:server": "pnpm --filter @resume/server dev",
     "build": "pnpm -r build",
-    "build:web": "pnpm --filter @resume/web build",
-    "build:server": "pnpm --filter @resume/server build",
+    "build:web": "pnpm --filter @resume/types build && pnpm --filter @resume/web build",
+    "build:server": "pnpm --filter @resume/types build && pnpm --filter @resume/server build",
     "deploy:server": "pnpm --filter @resume/server deploy",
     "logs:server": "pnpm --filter @resume/server pm2:logs",
     "stop:server": "pnpm --filter @resume/server pm2:stop",
