--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,10 @@
   "packageManager": "pnpm@10.28.2",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "prebuild": "pnpm --filter @resume/types build",
+    "typecheck": "tsc -b",
+    "build:bundle": "vite build",
+    "build": "pnpm run typecheck && pnpm run build:bundle",
     "lint": "eslint . --fix",
     "lint:check": "eslint .",
     "preview": "vite preview"
