feat: update build process to include type checking and improve script execution

--- a/shared/types/package.json
+++ b/shared/types/package.json
@@ -15,6 +15,6 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -b --clean tsconfig.json && tsc -b tsconfig.json"
   }
 }
