--- a/web/.env.production
+++ b/web/.env.production
@@ -1,3 +1,3 @@
 # API Base URL for production
 # Update this to your production API server URL
-VITE_API_BASE_URL=http://120.24.215.191:3000
+VITE_API_BASE_URL=https://picfind.top/api
