feat: enhance CORS support and add API key validation in DeepAnalysisTab component

--- a/server/.env.example
+++ b/server/.env.example
@@ -8,7 +8,10 @@ DEEPSEEK_API_KEY=sk-xxxx
 DEEPSEEK_BASE_URL=https://api.deepseek.com
 
 # Comma-separated CORS allowlist. Use "*" to allow all (not recommended for production).
-CORS_ORIGIN=https://your-web-domain.com
+# Supports wildcard patterns like:
+# - https://*.vercel.app
+# - *.your-domain.com
+CORS_ORIGIN=https://your-web-domain.com,https://*.vercel.app
 CORS_CREDENTIALS=false
 CORS_MAX_AGE=86400
 
